# wow.export.cpp

./: .gitignore  .gitmodules  AUDIT_TRACKER.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEBASE_OVERVIEW.md  CONVERSION_GUIDANCE.md  CONVERSION_TRACKER.md  DEVIATIONS.md  LICENSE  README.md  TODO_TRACKER.md  UI_REFERENCE.md  _stage_101_106.md  _stage_107_112.md  _stage_113_118.md  _stage_119_120.md  _stage_91_95.md  _stage_96_100.md  audit_findings_21_22.md  audit_findings_23_24.md  audit_findings_25_26.md  audit_findings_27_28.md  audit_stage_121_125.md  audit_stage_126_130.md  audit_stage_131_135.md  audit_stage_136_140.md  audit_stage_141_145.md  audit_stage_146_150.md  audit_stage_171-175.md  audit_stage_176-182.md  audit_stage_183-187.md  audit_stage_188-191.md  audit_stage_192-195.md  audit_tracker.md  prompts.txt  tmp_audit_163_166.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
addons/blender/io_scene_wowobj/: __init__.py
data/: app.css
installer/: installer.cpp
scripts/: build.ps1  build.sh  setup-ffmpeg.ps1  setup-libmpv.ps1
src/: app.cpp  app.css  app.h  default_config.jsonc  main.cpp
src/help_docs/: KB001_RUNTIME_LOG.md
src/js/: CMakeLists.txt  MultiMap.cpp  MultiMap.h  MultiMap.js  blob.cpp  blob.h  buffer.cpp  buffer.h  buffer.js  config.cpp  config.h  config.js  constants.cpp  constants.h  core.cpp  core.h  crc32.cpp  crc32.h  crc32.js  external-links.cpp  external-links.h  external-links.js  file-writer.cpp  file-writer.h  file-writer.js  generics.cpp  generics.h  generics.js  gpu-info.cpp  gpu-info.h  icon-render.cpp  icon-render.h  icon-render.js  install-type.cpp  install-type.h  log.cpp  log.h  log.js  mmap.cpp  mmap.h  (+18 more)
src/js/3D/: AnimMapper.cpp  AnimMapper.h  BoneMapper.cpp  BoneMapper.h  GeosetMapper.cpp  GeosetMapper.h  GeosetMapper.js  ShaderMapper.cpp  ShaderMapper.h  Shaders.cpp  Shaders.h  Skin.cpp  Skin.h  Skin.js  Texture.cpp  Texture.h  Texture.js  WMOShaderMapper.cpp  WMOShaderMapper.h
src/js/3D/camera/: CameraControlsGL.cpp  CameraControlsGL.h  CharacterCameraControlsGL.cpp  CharacterCameraControlsGL.h
src/js/3D/exporters/: ADTExporter.cpp  ADTExporter.h  CharacterExporter.cpp  CharacterExporter.h  M2Exporter.cpp  M2Exporter.h  M2Exporter.js  M2LegacyExporter.cpp  M2LegacyExporter.h  M3Exporter.cpp  M3Exporter.h  WMOExporter.cpp  WMOExporter.h  WMOExporter.js  WMOLegacyExporter.cpp  WMOLegacyExporter.h
src/js/3D/gl/: GLContext.cpp  GLContext.h  GLTexture.cpp  GLTexture.h  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/js/3D/loaders/: ADTLoader.cpp  ADTLoader.h  ADTLoader.js  ANIMLoader.cpp  ANIMLoader.h  BONELoader.cpp  BONELoader.h  LoaderGenerics.h  (+23 more)
src/js/casc/: blp.cpp  blp.h  blp.js  blte-reader.cpp  blte-reader.h  blte-reader.js  blte-stream-reader.cpp  blte-stream-reader.h  build-cache.cpp  build-cache.h  build-cache.js  casc-source-local.cpp  casc-source-local.h  casc-source-local.js  casc-source-remote.cpp  casc-source-remote.h  casc-source-remote.js  casc-source.cpp  casc-source.h  casc-source.js  cdn-config.cpp  cdn-config.h  cdn-config.js  cdn-resolver.cpp  cdn-resolver.h  content-flags.cpp  content-flags.h  db2.cpp  db2.h  dbd-manifest.cpp  dbd-manifest.h  export-helper.cpp  export-helper.h  export-helper.js  install-manifest.cpp  install-manifest.h  install-manifest.js  jenkins96.cpp  jenkins96.h  jenkins96.js  (+16 more)
src/js/components/: checkboxlist.cpp  checkboxlist.h  checkboxlist.js  combobox.cpp  combobox.h  context-menu.cpp  context-menu.h  context-menu.js  data-table.cpp  data-table.h  file-field.cpp  file-field.h  file-field.js  home-showcase.cpp  home-showcase.h  item-picker-modal.cpp  item-picker-modal.h  itemlistbox.cpp  itemlistbox.h  itemlistbox.js  listbox-maps.cpp  listbox-maps.h  listbox-zones.cpp  listbox-zones.h  listbox.cpp  listbox.h  listbox.js  listboxb.cpp  listboxb.h  listboxb.js  map-viewer.cpp  map-viewer.h  map-viewer.js  markdown-content.cpp  markdown-content.h  menu-button.cpp  menu-button.h  menu-button.js  model-viewer-gl.cpp  model-viewer-gl.h  (+6 more)
src/js/db/: CompressionType.cpp  CompressionType.h  DBCReader.cpp  DBCReader.h  DBDParser.cpp  DBDParser.h  DBDParser.js  FieldType.cpp  FieldType.h  WDCReader.cpp  WDCReader.h  WDCReader.js
src/js/hashing/: xxhash64.cpp  xxhash64.h
src/js/modules/: font_helpers.cpp  font_helpers.h  legacy_tab_audio.cpp  legacy_tab_audio.h  legacy_tab_data.cpp  legacy_tab_data.h  legacy_tab_files.cpp  legacy_tab_files.h  legacy_tab_fonts.cpp  legacy_tab_fonts.h  legacy_tab_home.cpp  legacy_tab_home.h  legacy_tab_textures.cpp  legacy_tab_textures.h  module_test_a.cpp  module_test_a.h  module_test_b.cpp  module_test_b.h  screen_settings.cpp  screen_settings.h  screen_source_select.cpp  screen_source_select.h  tab_audio.cpp  tab_audio.h  tab_blender.cpp  tab_blender.h  tab_changelog.cpp  tab_changelog.h  tab_characters.cpp  tab_characters.h  tab_creatures.cpp  tab_creatures.h  tab_data.cpp  tab_data.h  tab_decor.cpp  tab_decor.h  tab_fonts.cpp  tab_fonts.h  tab_help.cpp  tab_help.h  (+24 more)
src/js/mpq/: bitstream.cpp  bitstream.h  build-version.cpp  build-version.h  bzip2.cpp  bzip2.h  huffman.cpp  huffman.h  mpq-install.cpp  mpq-install.h  mpq.cpp  mpq.h  pkware.cpp  pkware.h
src/js/ui/: audio-helper.cpp  audio-helper.h  char-texture-overlay.cpp  char-texture-overlay.h  character-appearance.cpp  character-appearance.h  data-exporter.cpp  data-exporter.h  listbox-context.cpp  listbox-context.h  model-viewer-utils.cpp  model-viewer-utils.h  texture-exporter.cpp  texture-exporter.h  texture-ribbon.cpp  texture-ribbon.h  texture-ribbon.js  uv-drawer.cpp  uv-drawer.h
src/js/workers/: cache-collector.cpp  cache-collector.h
src/js/wow/: EquipmentSlots.cpp  EquipmentSlots.h  ItemSlot.cpp  ItemSlot.h  ItemSlot.js  equip-item.cpp  equip-item.h
src/shaders/: adt.fragment.old.shader  adt.fragment.shader  adt.vertex.shader  char.fragment.shader  char.vertex.shader  m2.fragment.shader  m2.vertex.shader  wmo.fragment.shader  wmo.vertex.shader
src/updater/: updater.cpp  updater.js
(+82 files in other folders)
